# xfmr-dtr-lite

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  requirements.txt  validation_with_IEEE_std.ipynb
data/: daily_profile.csv  example_profile.csv
data/validation/: ONAN_temp_ageing.mat  distribution_transformer_temp_ageing.mat
params/: ieee_annex_c_187mva_odaf.json  power_transformer.json  service_transformer.json  service_transformer_50kva.json  transformer_params_comparison.csv
src/transformer_dtr_lite/: __init__.py  aging.py  hotspot.py  thermal_limit.py
